
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.4-pl
====================================
- [#MODX-2279] Fix bad AJAX response if database does not exist or can't be created during setup
- [#MODX-2404] Fixed issue with auto_menuindex and multiple contexts
- [#MODX-2354] Fixed issue with image TV loading incorrect URL in thumbnail preview on initial load
- [#MODX-2357] Properly addressed issue where FC hideTab rule was causing hidden tabs to show if they were active at load
- Refactor modAccessibleObject to centralize load policy check in _loadInstance()
- Update xPDO for several critical bug fixes
- [#MODX-2402] In Package Browser, Most Popular/Recently Added package names are now links to auto-search in grid
- [#MODX-2397] Added filtering and search to FC rule grid
- [#MODX-2401] Adjusted JS version postfix code to not adjust .php (or non-js) files used as script src targets
- Improved context menus on FC rule grid to allow for batch actions on selected items
- Added `for_parent` field to FC rules, to allow for more fine-grained control of rule applications
- [#MODX-2385] Fixed issue when Context ACL is using no policy that prevented grid loading
- [#MODX-2380] Fixed issue with upgrades and rb_base_dir, rb_base_url and filemanager_path
- [#MODX-2246] Added topmenu_show_descriptions system setting to be able to toggle the top menus description text
- [#MODX-2375] Improved class key field in Resource panel to a dropdown, added modClassMap for easier querying of resource/element types
- [#MODX-2391] Fixed issues with FC rules not being respected on resource/create with default values for new Resource
- [#MODX-2382] Fixed dynamic width of fields in windows across ui
- [#MODX-2383] Fix inability to update rank of TV's in template editor