@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.4-pl
 ====================================
+- [#MODX-2407] Fixed issue where user settings were not respected in connectors in mgr
 - [#MODX-2279] Fix bad AJAX response if database does not exist or can't be created during setup
 - [#MODX-2404] Fixed issue with auto_menuindex and multiple contexts
 - [#MODX-2354] Fixed issue with image TV loading incorrect URL in thumbnail preview on initial load
